# eurobot_2025

./: .gitignore  README.md  bashrc  entrypoint.sh  frames_2025-01-19_10.48.56.gv  frames_2025-05-02_09.58.35.gv  frames_2025-05-04_01.22.11.gv  launch.sh  pose_pb2.py
.devcontainer/: Dockerfile  devcontainer.json
aruco_detector/: package.xml  setup.py
aruco_detector/aruco_detector/: aruco_detector.py
cpp_camera_reader/: CMakeLists.txt  package.xml
cpp_camera_reader/src/: camera_node.cpp
custom_costmap_layer/: CMakeLists.txt  package.xml
custom_costmap_layer/include/custom_costmap_layer/: custom_layer.hpp
custom_costmap_layer/src/: custom_layer.cpp
src/camera_cus/: package.xml  setup.cfg  setup.py
src/camera_cus/camera_cus/: TIS.py  camera_node.py  test.py  tis.py
src/cpp_camera_reader/include/cpp_camera_reader/: camera_node.hpp
src/cpp_camera_reader/src/: camera_node.cpp
src/cpp_omnidrive_gazebo_controller/: CMakeLists.txt  package.xml
src/cpp_omnidrive_gazebo_controller/src/: cpp_omnidrive_gazebo_controller.cpp
src/custom_layer/custom_costmap_layer/: custom_layer.xml  package.xml
src/custom_layer/custom_costmap_layer/include/custom_costmap_layer/: custom_layer.hpp
src/custom_layer/custom_costmap_layer/src/: custom_layer.cpp
src/custom_layer/keepout_layer/plugin/: keepout_layer.cpp
src/custom_layer/object_layer/: CMakeLists.txt
src/custom_layer/object_layer/include/object_layer/: object_layer.hpp
src/depth_camera/: package.xml  setup.py
src/depth_camera/depth_camera/: README.md  depth_camera_handler.py
src/depth_camera/src/: main.cc
src/depth_camera_left/: CMakeLists.txt  package.xml  readme.md
src/depth_camera_left/src/: main.cc  serial.hh
src/depth_camera_right/: CMakeLists.txt  package.xml  readme.md
src/depth_camera_right/src/: main.cc  serial.cc
src/gazebo_expirience/: requester.py
src/grip_test/: README.md  package.xml  setup.cfg  setup.py
src/grip_test/grip_test/: test.py
src/gripper_plugin_gz/: CMakeLists.txt  README.md  entrypoint.sh  package.xml
src/gripper_plugin_gz/src/: gripper_plugin_gz.cc  gripper_plugin_gz.hh
src/gripper_sim_gz/: package.xml  setup.cfg  setup.py
src/gripper_sim_gz/gripper_sim_gz/: can_gripper_bridge.py  collizon_sim_gz.py  detached_sim_gz.py  gripper_bridge.py  gripper_command_gz.py  gripper_sim_gz.py
src/incredible_mover/: package.xml  setup.cfg  setup.py
src/incredible_mover/incredible_mover/: mover.py
src/lifters_control/: package.xml  readme.md  setup.cfg  setup.py
src/lifters_control/lifters_control/: lifters_control.py  robot_lifters.py
src/robot_core/: CMakeLists.txt  package.xml
src/robot_core/launch/: robot_core.launch.py
src/route_controller/: package.xml  readme.md  setup.cfg  setup.py
src/route_controller/route_controller/: coord_handler.py  drive.py  navi.py  robot_navigator.py  twist_pub.py  util.py
src/shesnar/: CMakeLists.txt  README.md  package.xml
src/shesnar/config/: ekf_params.yaml  euro_map.pgm  euro_map.yaml  gz_bridge.yaml  mapper_params_online_async.yaml  nav2_params.yaml  nav2_params_amcl.yaml  nav2_params_old.yaml  ser_euro_map.data  urdf_core.rviz
src/shesnar/launch/: launch_real.launch.py  launch_sim.launch.py  localization.launch.py  localization_launch.py  localization_launch_amcl.py  navigation_launch.py  online_async_launch.py  rsp.launch.py  tim_rsp.launch.py  update_costmap.py
src/shesnar/maps/: euro_map.pgm  euro_map.yaml  euro_map_2.pgm  euro_map_2.yaml  euro_map_updated.pgm  euro_ser_map.data  real_full_map.pgm  real_full_map.yaml  real_map.pgm  real_map.yaml  real_map_origin.pgm  real_map_ser.data
src/shesnar/meshes/: aruco_plane.mtl  base.STL  body.STL  body.dae  body.mtl  lidar.STL  lidar.dae
src/shesnar/urdf/: can_gripper.xacro  cus.urdf.xacro  depth_camera.xacro  gazebo_control.xacro  gripper.xacro  inertial_macros.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  robot_lifters.xacro  sim_gripper_gz.xacro
src/shesnar/worlds/: actual_field.mtl  cus.sdf  empty.world  obstacle.world  untitled.mtl
src/sllidar_ros2/launch/: sllidar_a3_launch.py
src/uart_drive/: CMakeLists.txt  package.xml
src/uart_drive/config/: uart_params.yaml
src/uart_drive/src/: uart_drive.cpp
src/uart_grippers/: CMakeLists.txt  package.xml
src/uart_grippers/config/: uart_params.yaml
src/uart_grippers/src/: uart_grippers.cpp
